Realiza cambios para disminuir la deuda tecnica